@@ -1,4 +1,5 @@
 31.may (ws)
+      - fix for ties between notes of different voice
       - added "Schleifer" articulation
 29.may (ws)
       - some berlin music hackday hacks
